# nhs-number-cli-using-rust

./: AGENTS.md  Cargo.toml  README.md  llms.json  llms.txt
.claude/: settings.local.json
docs/: index.md
docs/about-nhs-numbers/: index.md
docs/architecture/: index.md
docs/development/: index.md
docs/examples/: index.md
docs/faq/: index.md
docs/index/: index.md
docs/installation/: index.md
docs/troubleshooting/: index.md
docs/usage/: index.md
examples/: index.md  run-all.sh
examples/01-basic/: README.md  expected-stderr.txt  expected-stdout.txt  input.txt  run.sh
examples/02-valid-only/: README.md  expected-stdout.txt
examples/03-mixed-formats/: README.md  expected-stderr.txt  expected-stdout.txt  input.txt
examples/04-blank-lines/: README.md  expected-stderr.txt  expected-stdout.txt  input.txt  run.sh
examples/05-separate-streams/: README.md  expected-errors.txt  expected-valid.txt  input.txt  run.sh
examples/06-csv-column/: README.md  expected-stderr.txt  patients.csv  run.sh
examples/07-fail-on-invalid/: README.md  bad.txt  good.txt  run.sh  validate-strict.sh
examples/08-crlf-windows/: README.md  expected-stdout-crlf.txt  input-crlf.txt  input-trailing.txt  run.sh
examples/09-counts-summary/: README.md  expected-summary.txt  input.txt  run.sh  summary.sh
examples/10-parse-errors/: README.md  expected-stderr.txt  input.txt
